Mise en page du code, page d'affichage de résultats des films et page d'accueil utilisateur normal connect